--- a/assets/css/index3.css
+++ b/assets/css/index3.css
@@ -2,160 +2,291 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-}
-
-.background_image img {
-    height: 100%;
+  }
+  body {
+    background-color: #fafbfc;
+  }
+  main {
+    display: flex;
+    height: calc(100vh - 72px);
+  }
+  .login-header {
+    margin-top: 30px;
+    .container-fluid {
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+    p {
+      font-family: Segoe UI;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 16px;
+      text-align: left;
+      margin-right: 20px !important;
+      color: #292d34;
+    }
+    .btn {
+      color: white;
+      background: #5f55ee;
+      box-shadow: 0px 10px 25px 0px #7f77f180;
+      width: Hug (93px) px;
+      height: Fixed (40px) px;
+      padding: 12.5px 20px 13.5px 20px;
+      gap: 0px;
+      border-radius: 9px;
+      opacity: 0px;
+      font-family: Segoe UI;
+      font-size: 14px;
+      font-weight: 700;
+      line-height: 14px;
+      letter-spacing: 0.4000000059604645px;
+      text-align: left;
+    }
+  }
+  .background_image img {
+    width: 100%;
     position: fixed;
     z-index: -1;
-}
-
-.form-container {
-    background-color: #fff;
-    margin: 50px auto;
-    padding: 10px 30px;
-    border-radius: 10px;
-    width: 100%;
-    max-width: 500px;
+    bottom: 0;
+  }
+  
+  .form-container {
+    width: 480px;
+    height: 509px;
+    padding: 30px 60px 30px 60px;
+    border-radius: 12px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     position: relative;
-}
-
-.google_button {
-    border: 1px solid;
+    background-color: white;
+    margin-bottom: -78px;
+    
+  
+  }
+  
+  .google_button {
+    border: 1px solid #dadce0;
     padding: 10px;
     width: 100%;
     position: relative;
-}
-
-.google_button img {
+    font-size: 14px;
+  }
+  
+  .google_button img {
     width: 30px;
     position: absolute;
     left: 10px;
     top: 50%;
     transform: translateY(-50%);
-}
-
-.inline-hr-container {
+  }
+  
+  .inline-hr-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 20px 0;
-}
-
-.line_one,
-.line_two {
+    margin: 10px 0;
+    hr {
+      margin: 0 auto;
+    }
+  }
+  form label {
+    font-size: 13px;
+    color: #292d34;
+  }
+  form {
+    input {
+      width: 360px;
+      height: 40px;
+      padding: 10.5px 21px 10.5px 37px;
+      border-radius: 9px;
+      border: 1px solid #d6d9de;
+    }
+    .login {
+      background: #5f55ee;
+      color: white;
+      border-radius: 9px;
+      font-family: Segoe UI;
+      font-size: 14px;
+      font-weight: 900;
+      line-height: 14px;
+      text-align: center;
+      height: 50px;
+      margin-top: 10px;
+    }
+  }
+  .line_one,
+  .line_two {
     flex: 1;
     border: none;
-    border-top: 1px solid #000;
-}
-
-.line_one {
+    border-top: 1px solid #87909e;
+  }
+  .nav-btn .btn-2 {
+    display: none;
+  }
+  .line_one {
     margin-right: 10px;
-}
-
-.line_two {
+  }
+  
+  .line_two {
     margin-left: 10px;
-}
-
-.inline-text {
+  }
+  
+  .inline-text {
+    font-size: 13px;
     margin: 0;
     padding: 0 10px;
     white-space: nowrap;
-}
-
-.form input {
-   padding-left: 50px;
+    color: #87909e;
+  }
+  
+  .form input {
+    border: 1px solid #ced4da;
+    padding-left: 50px;
     width: 100%;
     border-radius: 5px;
-}
-.mb-3 {
     margin-bottom: 1rem;
-}
-
-.position-relative {
-    position: relative;
-}
-
-.d-flex {
-    display: flex;
-}
-
-.justify-content-between {
-    justify-content: space-between;
-}
-
-.w-25 {
-    width: 25%;
-}
-
-
-.mail-icon,
-.password-icon,.user-icon {
+  }
+  
+  .mail-icon,
+  .password-icon {
     position: absolute;
     left: 10px;
-    top: 40px;
-}
-
-#password,#email,#name{
+    top: 35px;
+  }
+  
+  #password,
+  #email {
     padding: 10px 50px;
-}
-
-.forget-text {
-    display: block;
-    /* position: absolute; */
-    margin-top: -30px;
-    /* margin-bottom: 20px; */
-    font-size: 15px;
-    margin-right: 10px;
-    text-align: end;
-}
-
-.login {
+  }
+  
+  .forget-text {
+    position: absolute;
+    top: 42px;
+    right: 17px;
+    font-size: 12px;
+    color: #5f55ee;
+    text-decoration: none;
+  }
+  
+  .login {
     width: 100%;
     padding: 10px;
-}
-
-.login_SSO {
-    font-size: 12px;
-}
-
-
-
-
-.footer_end {
-    margin-top: 30px;
-}
-
-
-.footer{
-    font-size: 10px;
-}
-
- .comp_images {
-gap:2%;
- }
-
-.help{
-
-    margin-left: 95%;
-    padding:1px 23px 0px 23px;
-    background: rgba(54, 54, 186, 0.132);
-}
-
-
-
-
-@media screen and (max-width: 500px) {
-   .background_image img{ width: 100%;
-    margin-right: 500px;
-    width: 1500px;
-    position: absolute;
-    margin-top: -110px;
   }
- .nav-btn a{
-    margin-top: -60px;
-    margin-left: 250px;
- }
-
-}
+  
+  .login_SSO {
+    text-align: center;
+    margin-top: 15px;
+    color: #5f55ee;
+    font-family: Segoe UI;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 12px;
+    text-align: center;
+    a {
+      text-align: center;
+      margin-top: 15px;
+      color: #5f55ee;
+      font-family: Segoe UI;
+      font-size: 12px;
+      font-weight: 400;
+      line-height: 12px;
+      text-align: center;
+      text-decoration: none;
+    }
+  }
+  .message_icon{
+    margin-left: 28%;
+  }
+  
+  .no_account {
+    margin-top: 30px;
+    text-align: center;
+    color: #ffffff;
+  }
+  
+  .footer_end {
+    text-align: center;
+    color: white;
+    margin-top: 30px;
+  }
+  .no_account {
+    font-size: 13px;
+    margin-bottom: 145px;
+  }
+  
+  .footer {
+    font-size: 10px;
+  }
+  .no_account{
+      a{
+          text-underline-offset:4px;
+      }
+  }
+  .help {
+    margin-top: -30px;
+    margin-left: 91%;
+    padding: 5px 14px 5px 14px;
+    background: #FFFFFF29;
+    border-radius:6px;
+    box-shadow: 0px 5px 15px 0px #101E3626;
+    p{
+      margin-bottom:0px;
+      font-weight:bold;
+    }
+    a{
+      text-decoration:none!important;
+    }
+  }
+  @media only screen and (max-width: 600px) {
+  .form-container{
+    width: 90%;
+          margin: 20px;
+          padding: 23px;
+          margin-bottom: 22px;
+      }
+      .background_image{
+       margin-bottom: 500px;
+       margin-top: -500px;
+      }
+      .nav-btn a {
+        margin-top: -11px;
+        margin-left: 50px;
+        width: 95px;
+      }
+      .nav-btn p {
+        display: none;
+      }
+      .btn-2 { 
+        width: 176px;
+        font-size: 20px;
+      }
+      .background_image img{       
+        height: 100vh;
+        max-width: 100%;
+      }
+      .footer{
+        margin-top: -50px;
+        margin-bottom: 92px;
+      }
+  
+  }
+  
+  @media only screen and (max-width: 400px) {
+    .form-container{
+      margin-top: 150px !important;
+    }
+    .no_account p{
+      
+      margin-bottom: -89px;
+    }
+  
+  }
+  /* @media only screen and (max-width: 1800px) {
+  .form-container{       
+  margin-bottom: auto;
+  justify-content: center;
+  text-align: center;
+  
+    } */
+  
+  
+  
