--- a/assets/css/index3.css
+++ b/assets/css/index3.css
@@ -3,6 +3,15 @@
     padding: 0;
     font-family: sans-serif;
   }
+
+
+  :root {
+    --yellow: #FFCC00;
+    --black: #000000;
+    --gray: #808080;
+}
+
+
   body {
     background-color: #fafbfc;
   }
@@ -17,7 +26,7 @@
     left: 0;
     overflow: hidden;
     pointer-events: none;
-    background: url(/assets/images/one.svg) center 10px no-repeat;
+    background: url("../images/one.svg") center 10px no-repeat;
     background-size: cover;
     z-index: -1;
     .curve-vector {
@@ -65,10 +74,12 @@
 
 
 
-
+.img-fluid{
+  width: 25%;
+}
   main {
     display: flex;
-    height: calc(100vh - 78px);
+    height: calc(100vh - 113px);
   }
   .login-header {
     margin-top: 30px;
@@ -87,8 +98,8 @@
     }
     .btn {
       color: white;
-      background: #5f55ee;
-      box-shadow: 0px 10px 25px 0px #7f77f180;
+      background: var(--black);
+      box-shadow: 0px 10px 25px 0px #31313580;
       width: Hug (93px) px;
       height: Fixed (40px) px;
       padding: 12.5px 20px 13.5px 20px;
@@ -118,7 +129,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     position: relative;
     background-color: white;
-    margin-bottom: -78px;
+    margin-bottom: 190px;
     
   
   }
@@ -165,7 +176,7 @@
       border: 1px solid #d6d9de;
     }
     .login {
-      background: #5f55ee;
+      background: var(--black);
       color: white;
       border-radius: 9px;
       font-family: Segoe UI;
@@ -248,7 +259,7 @@
     a {
       text-align: center;
       margin-top: 15px;
-      color: #5f55ee;
+      color: var(--black);
       font-family: Segoe UI;
       font-size: 12px;
       font-weight: 400;
@@ -301,7 +312,11 @@
     }
   }
   @media only screen and (max-width: 600px) {
-  .form-container{
+  
+    .img-fluid{
+      width: 63%;
+    }
+    .form-container{
     width: 90%;
           margin: 20px;
           padding: 23px;
