--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,12 +3,23 @@
   padding: 0;
   font-family: sans-serif;
 }
+:root {
+  --yellow: #FFCC00;
+  --black: #000000;
+  --gray: #808080;
+}
+
+
+.img-fluid{
+  width: 25%;
+}
+
 body {
   background-color: #fafbfc;
 }
 main {
   display: flex;
-  height: calc(100vh - 78px);
+  height: calc(100vh - 114px);
 }
 .background-image {
   position: absolute;
@@ -18,7 +29,7 @@ main {
   left: 0;
   overflow: hidden;
   pointer-events: none;
-  background: url(/assets/images/one.svg) center 10px no-repeat;
+  background: url("../images/one.svg") center 10px no-repeat;
   background-size: cover;
   z-index: -1;
   .curve-vector {
@@ -79,8 +90,8 @@ main {
   }
   .btn {
     color: white;
-    background: #5f55ee;
-    box-shadow: 0px 10px 25px 0px #7f77f180;
+    background: var(--black);
+    box-shadow: 0px 10px 25px 0px #31313580;
     width: Hug (93px) px;
     height: Fixed (40px) px;
     padding: 12.5px 20px 13.5px 20px;
@@ -151,7 +162,7 @@ form {
     border: 1px solid #d6d9de;
   }
   .login {
-    background: #5f55ee;
+    background:var(--black);
     color: white;
     border-radius: 9px;
     font-family: Segoe UI;
@@ -213,7 +224,7 @@ form {
   top: 42px;
   right: 17px;
   font-size: 12px;
-  color: #5f55ee;
+  color:var(--black);
   text-decoration: none;
 }
 
@@ -234,7 +245,7 @@ form {
   a {
     text-align: center;
     margin-top: 15px;
-    color: #5f55ee;
+    color: var(--black);
     font-family: Segoe UI;
     font-size: 12px;
     font-weight: 400;
@@ -294,6 +305,13 @@ form {
     margin-left: 50px;
     width: 95px;
   }
+  .img-fluid{
+    width: 63%;
+  }
+  main {
+    display: flex;
+    height: calc(100vh - 112px);
+}
   .nav-btn p {
     display: none;
   }
