--- a/assets/css/index4.css
+++ b/assets/css/index4.css
@@ -3,6 +3,13 @@
     padding: 0;
     font-family: sans-serif;
 }
+
+:root {
+    --yellow: #FFCC00;
+    --black: #000000;
+    --gray: #808080;
+}
+
 .navbar {
     background-color: rgba(50, 52, 82, 1);
 height: 40px;
