--- a/assets/css/index2.css
+++ b/assets/css/index2.css
@@ -53,9 +53,7 @@
       max-width:450px;
       width:auto !important;
     }
-    .no_account{
-      margin-bottom:140px !important;
-    }
+ 
     .footer{
       max-width:335px;
       margin:0 auto;
@@ -76,9 +74,11 @@
   main {
     display: flex;
     height: calc(100vh - 113px);
+    height: 80vh;
   }
   .login-header {
-    margin-top: 30px;
+    /* margin-top: 30px; */
+    height: 20vh;
     .container-fluid {
       padding-left: 30px;
       padding-right: 30px;
@@ -233,6 +233,7 @@
     font-size: 12px;
     color: var(--black);
     text-decoration: none;
+    margin-top: 31px;
   }
   
   .login {
@@ -270,12 +271,14 @@
   
   .footer_end {
     text-align: center;
-    color: white;
-    margin-top: 30px;
+    color: white; 
+     position: absolute;
+    bottom:0
+    /* margin-top: 30px; */
   }
   .no_account {
     font-size: 13px;
-    margin-bottom: 145px;
+    /* margin-bottom: 145px; */
   }
   
   .footer {
@@ -316,9 +319,7 @@
           padding: 23px;
           margin-bottom: 100px;
       }
-      main {
-        height: calc(100vh - 112px);
-      }
+   
       .background_image{
        margin-bottom: 500px;
        margin-top: -500px;
@@ -327,6 +328,9 @@
         margin-top: -11px;
         margin-left: 50px;
         width: 95px;
+      }
+      .footer_end{
+        margin: 4%;
       }
       .nav-btn p {
         display: none;
@@ -337,12 +341,9 @@
       }
       .background_image img{       
         height: 865px;
-        max-width: 413px;
+        max-width: 200px;
       }
-      .footer{
-        margin-top: -50px;
-        margin-bottom: 92px;
-      }
+    
       .comp_images{
         /* margin-bottom: 50px; */
         gap: 17px;
@@ -350,17 +351,7 @@
   
   
   }
-  
-  @media only screen and (max-width: 400px) {
-    .form-container{
-      margin-top: 150px !important;
-    }
-    .no_account p{
-      
-      margin-bottom: -89px;
-    }
 
-  }
   /* @media only screen and (max-width: 1800px) {
   .form-container{       
   margin-bottom: auto;
