--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,13 +1,5 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-:root {
-  --yellow: #ffcc00;
-  --black: #000000;
-  --gray: #808080;
-}
+
+@import url(./app.css);
 
 .img-fluid {
   width: 25%;
