--- a/assets/css/index2.css
+++ b/assets/css/index2.css
@@ -1,15 +1,6 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-  }
 
 
-  :root {
-    --yellow: #FFCC00;
-    --black: #000000;
-    --gray: #808080;
-}
+@import url(./app.css);
   .background-image {
     position: absolute;
     height: calc(100% - 17vh);
