--- a/assets/css/index3.css
+++ b/assets/css/index3.css
@@ -1,16 +1,7 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-  }
 
 
-  :root {
-    --yellow: #FFCC00;
-    --black: #000000;
-    --gray: #808080;
-}
 
+@import url(./app.css);
 
   body {
     background-color: #fafbfc;
