--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -10,4 +10,8 @@
     --black: #000000;
     --gray: #808080;
     --white : #ffffff;
+    --btn_y : #ffcc00;
+    --btn_b : #000000;
+    --btn_g : #808080;
+    --btn_w : #ffffff;
   }
