--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,4 +1,3 @@
-
 @import url(./app.css);
 @import url(./buttons.css);
 
@@ -235,128 +234,135 @@
 .nav-link:hover {
     color: var(--gray);
 }
-.h_discount_two{
-                position: absolute;
-right: 0;
-margin-top: -60px;
-            }
-            .h_d_offer_end{
-            line-height: 0px;
-font-size: 13px;
-color: gray;
+
+.h_discount_two {
+    position: absolute;
+    right: 0;
+    margin-top: -60px;
 }
-.h_d_offer{
-gap: 18px;
+
+.h_d_offer_end {
+    line-height: 0px;
+    font-size: 13px;
+    color: gray;
+}
+
+.h_d_offer {
+    gap: 18px;
 
 }
+
 .modal_two p,
-                                .h_bulb_img p {
-                                    margin-top: 0;
-                                    margin-bottom: 0;
-                                    line-height: 41px;
-                                }
+.h_bulb_img p {
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 41px;
+}
 
-                                .modal_two img {
-                                    gap: 2px;
-                                }
+.modal_two img {
+    gap: 2px;
+}
 
-                                .h_drp_list_modal {
-                                    border: 1px solid var(--gray);
-                                }
+.h_drp_list_modal {
+    border: 1px solid var(--gray);
+}
 
-                                .h_bulb_img {
-                                    display: flex;
+.h_bulb_img {
+    display: flex;
 
-                                }
-                                .h_nav_askai {
-        width: 40%;
-    }
+}
 
-    .h_nav_end {
-        gap: 20px;
-    }
+.h_nav_askai {
+    width: 40%;
+}
 
-    .h_nav_end button {
-        background-color: #ffcc00;
-        /* padding: 5px; */
-        border: none;
-    }
+.h_nav_end {
+    gap: 20px;
+}
 
-   
-                    @import url("./assets/css/buttons.css");
-                    :root {
-                                --yellow: #ffcc00;
-                                --black: #000000;
-                                --gray: #808080;
-                                --white: #ffffff;
-                            }
+.h_nav_end button {
+    background-color: var(--gray);
+    /* padding: 5px; */
+    border: none;
+}
 
 
-                            .h_modal_input {
-                                border: none;
-                            }
+@import url("./assets/css/buttons.css");
 
-                            .h_modal_button {
-                                gap: 10px;
-                            }
+:root {
+    --yellow: #ffcc00;
+    --black: #000000;
+    --gray: #808080;
+    --white: #ffffff;
+}
 
-                            .h_drp_one button {
-                                justify-content: space-evenly;
-                            }
 
-                            .h_modal_first {
-                                justify-content: space-between;
-                            }
+.h_modal_input {
+    border: none;
+}
 
-                            .first_end {
-                                gap: 10px;
-                            }
+.h_modal_button {
+    gap: 10px;
+}
 
-                            .h_reminder_input {
-                                border: none;
-                            }
+.h_drp_one button {
+    justify-content: space-evenly;
+}
 
-                            .h_reminder_button {
-                                gap: 30px;
-                            }
+.h_modal_first {
+    justify-content: space-between;
+}
 
-                            .h_reminder_button button {
-                                padding: 6px 14px;
-                                border-radius: 10px;
-                            }
+.first_end {
+    gap: 10px;
+}
 
-                            .h_reminder_end {
-                                justify-content: end;
-                                gap: 10px;
-                            }
+.h_reminder_input {
+    border: none;
+}
 
-                            .h_chat_input {
-                                border: none;
-                            }
+.h_reminder_button {
+    gap: 30px;
+}
 
-                            .h_chat_img {
-                                background: var(--white);
-                                border-radius: 20px;
-                                border: none;
-                            }
+.h_reminder_button button {
+    padding: 6px 14px;
+    border-radius: 10px;
+}
 
-                            .h_chat_footer {
-                                justify-content: space-around;
-                            }
+.h_reminder_end {
+    justify-content: end;
+    gap: 10px;
+}
 
-                            .h_chat_end {
-                                /* flex-direction: column; */
-                                gap: 10px;
-                            }
+.h_chat_input {
+    border: none;
+}
 
-                            .create_end {
-                                width: 126px;
-                            }
+.h_chat_img {
+    background: var(--white);
+    border-radius: 20px;
+    border: none;
+}
 
-                            .whiteboard_end,
-                            .dashboard_end {
-                                width: 169px;
-                            }
+.h_chat_footer {
+    justify-content: space-around;
+}
+
+.h_chat_end {
+    /* flex-direction: column; */
+    gap: 10px;
+}
+
+.create_end {
+    width: 126px;
+}
+
+.whiteboard_end,
+.dashboard_end {
+    width: 169px;
+}
+
 .navbar-custom {
     background: rgba(50, 52, 82, 1);
     height: 50px;
@@ -543,229 +549,307 @@ gap: 18px;
 
 
 .box_one {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                padding: 10px;
-                margin: 10px;
-            }
-    
-            .edit_one img {
-                margin-right: 10px;
-            }
-    
-            .edit_one h5 {
-                margin: 0;
-            }
-    
-            .other_one,.edit_one  {
-                display: flex;
-                align-items: center;
-            }
-    
-            .other_one img {
-                margin-left: 10px;
-            }
-       
-         
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    margin: 10px;
+}
 
-            .sidebar {
-                height: 100%;
-                width: 0;
-                position: fixed;
-                top: 0;
-                left: 0;
-                background-color:var(--gray);
-                color: var(--black);
-                overflow-x: hidden;
-                transition: 0.5s;
-                padding-top: 60px;
-                margin-top: 50px;
-                dis
-            }
-            .user_side{
-                
-                top: -48px;
-            }
-            .user_sidebar_menu h5{
-                margin-left: 41px;
-                margin-top: -36px;
-            }
-    
-            .sidebar a {
-                padding: 8px 8px 8px 32px;
-                text-decoration: none;
-                /* font-size: 25px; */
-                color:var(--black);
-                display: block;
-                transition: 0.3s;
-                margin-bottom: 2px;
-            }
-            .sidebar img{
-                position: absolute;
-        margin-top: 11px;
-        margin-left: 5px;
-            }
-    
-            .sidebar a:hover {
-                color: #f1f1f1;
-            }
-    
-            .sidebar .closebtn {
-                position: absolute;
-                top: 0;
-                right: 25px;
-                font-size: 36px;
-                margin-left: 50px;
-            }
-    
-            .openbtn {
-                font-size: 20px;
-                cursor: pointer;
-                background-color: #111;
-                color: white;
-                padding: 10px 15px;
-                border: none;
-                height: 56px;
-            }
-    
-            #main {
-                transition: margin-left .5s;
-                padding: 16px;
-            }
-            .half_bar{
-                width: 50px;
-                height:calc(100vh - 50px) ;
-        background:var(--gray);
-        padding: 10px !important;
-        margin: -16px !important;
-            }
-    
-    
-    
-    
-    
-            .details_one .list{
-                display: flex; 
-                margin: 5px;
-                margin-left: 50px;
-            }
-            .details_one .list p{
-                margin: 8px;
-            }
-    
-    
-    
-    
-    
-    
-    
-            #one_box{
-                border: 1px solid var(--yellow);
-                border-radius: 10px;
-                height:400px;
-                /* overflow: hidden; */
-                overflow-y: scroll;
-            }
-            /* width */
-    ::-webkit-scrollbar {
+.edit_one img {
+    margin-right: 10px;
+}
+
+.edit_one h5 {
+    margin: 0;
+}
+
+.other_one,
+.edit_one {
+    display: flex;
+    align-items: center;
+}
+
+.other_one img {
+    margin-left: 10px;
+}
+
+
+
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: var(--gray);
+    color: var(--black);
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    margin-top: 50px;
+    dis
+}
+
+.user_side {
+
+    top: -48px;
+}
+
+.user_sidebar_menu h5 {
+    margin-left: 41px;
+    margin-top: -36px;
+}
+
+.sidebar a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    /* font-size: 25px; */
+    color: var(--black);
+    display: block;
+    transition: 0.3s;
+    margin-bottom: 2px;
+}
+
+.sidebar img {
+    position: absolute;
+    margin-top: 11px;
+    margin-left: 5px;
+}
+
+.sidebar a:hover {
+    color: #f1f1f1;
+}
+
+.sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+.openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #111;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    height: 56px;
+}
+
+#main {
+    transition: margin-left .5s;
+    padding: 16px;
+}
+
+.half_bar {
+    width: 50px;
+    height: calc(100vh - 50px);
+    background: var(--gray);
+    padding: 10px !important;
+    margin: -16px !important;
+}
+
+
+
+
+
+.details_one .list {
+    display: flex;
+    margin: 5px;
+    margin-left: 50px;
+}
+
+.details_one .list p {
+    margin: 8px;
+}
+
+
+
+
+
+
+
+#one_box {
+    border: 1px solid var(--yellow);
+    border-radius: 10px;
+    height: 400px;
+    /* overflow: hidden; */
+    overflow-y: scroll;
+}
+
+/* width */
+::-webkit-scrollbar {
     width: 4px;
-    }
-    
-    /* Track */
-    ::-webkit-scrollbar-track {
+}
+
+/* Track */
+::-webkit-scrollbar-track {
     background: #f1f1f1;
-    
-    
-    }
-    
-    /* Handle */
-    ::-webkit-scrollbar-thumb {
+
+
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
     background: #888;
     height: 20px;
-    
-    
-    }
-    .date p{
-        margin-left: 2vw;
-    }
-    
-    
-    .date .b{
-        
+
+
+}
+
+.date p {
+    margin-left: 2vw;
+}
+
+
+.date .b {
+
     margin-left: 0px !important;
-    }
-    
-    
-    .all-day{
-        margin-left: 72%;
-    }
-    .box-two{
-        justify-content: space-between;
-    }
-    .box_two,.other_two{
-        justify-content: space-between;
-    }
-    .date_main{
-        justify-content: space-between;
-    }
-    .today{
-        gap: 15px;
-    }
-    #box-two,#box-three,#box-four,#box-five,#box-six,#box-seven,#box-eight,#box-nine,#box-ten{
-        border:1px solid var(--yellow);
-        border-radius: 10px;
-        height: 500px;
-    }
-    #box-two{
-        height: 400px !important;
-    }
-    #box-five{
-        height: 500px !important;
-    }
-    .myWork_list{
-        display: flex;
-        gap: 15px;
-    }
-    .myWork_list img{
-        margin-bottom: 12px;
-    }
+}
 
-    .four_two{
-        justify-content: space-between;
-    }
-    .other_four,.edit_four{
-        gap: 5px;
-    }
-    .Personal_list_content{
-        justify-content: center;
-        text-align: center;
-    }
-    .Personal_list_content button{
-width: 200px;
-border-radius:10px ;
-    }
-    .personal_list{
-        width: 50%;
-    }
 
-    .personal_list{
-        width: 50%;
-    }
-    .check_box_img{
-        width: 43%;
-    }
-    .check_box_img{
-        width: 43%;
-    }
+.all-day {
+    margin-left: 72%;
+}
 
-    .nine_dropdown{
-        width: 57vw;
-    }
-    .nine_dropdown,.drp_down_list_2{
-        width: 57vw;
-    }
-    .drp_down_2{
-        gap: 25px;
-    }
-    
+.box-two {
+    justify-content: space-between;
+}
+
+.box_two,
+.other_two {
+    justify-content: space-between;
+}
+
+.date_main {
+    justify-content: space-between;
+}
+
+.today {
+    gap: 15px;
+}
+
+#box-two,
+#box-three,
+#box-four,
+#box-five,
+#box-six,
+#box-seven,
+#box-eight,
+#box-nine,
+#box-ten {
+    border: 1px solid var(--yellow);
+    border-radius: 10px;
+    height: 500px;
+}
+
+#box-two {
+    height: 400px !important;
+}
+
+#box-five {
+    height: 500px !important;
+}
+
+.myWork_list {
+    display: flex;
+    gap: 15px;
+}
+
+.myWork_list img {
+    margin-bottom: 12px;
+}
+
+.four_two {
+    justify-content: space-between;
+}
+
+.other_four,
+.edit_four {
+    gap: 5px;
+}
+
+.Personal_list_content {
+    justify-content: center;
+    text-align: center;
+}
+
+.Personal_list_content button {
+    width: 200px;
+    border-radius: 10px;
+}
+
+.personal_list {
+    width: 50%;
+}
+
+.personal_list {
+    width: 50%;
+}
+
+.check_box_img {
+    width: 43%;
+}
+
+.check_box_img {
+    width: 43%;
+}
+
+.nine_dropdown {
+    width: 57vw;
+}
+
+.nine_dropdown,
+.drp_down_list_2 {
+    width: 57vw;
+}
+
+.drp_down_2 {
+    gap: 25px;
+}
+
+.navbar {
+    height: 50px;
+    background: var(--gray) !important;
+}
+
+.h_main_profile {
+    position: absolute !important;
+
+    left: 77% !important;
+}
+
+.h_sidebar_button {
+    margin-top: -9px;
+}
+
+.h_main_profile {
+    position: absolute;
+    right: 0;
+    left: 60vh;
+}
+
+.top-nav img,
+.h_sidebar_two img {
+    margin: 8px;
+}
+.h_discount_text span {
+    font-size: 14px;
+}
+
+.h_business_title {
+    gap: 10px;
+}
+
+.h_business_title button {
+    padding: 2px !important;
+
+}
+
+.h_discount_first {
+    background-color: var(--yellow);
+    border-radius: 10px;
+}
